--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 </section>
 <section class="content">
   <p>
-  Welcome to John Doe Photography! Please, check out my <a href="/portfolio/">Portfolio</a> to see my work.
+  Welcome to my playground <a href="/portfolio/">Portfolio</a> .
   </p>
 </section>
