updated graphic colour

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: default
 </section>
 <section class="content">
   <p>
-  Welcome to my playground <a href="/portfolio/">Portfolio</a> .
+  Welcome to my playground <a href="portfolio/">Portfolio</a> .
   </p>
 </section>
