--- a/index.html
+++ b/index.html
@@ -8,4 +8,11 @@ layout: default
   <p>
   Welcome to my playground <a href="portfolio/">Portfolio</a> .
   </p>
+
+  <h1>Recent Posts</h1>
+    <ul class="posts">
+      { %% for post in site.posts limit:5 %% }
+        <li><span>{ { post.date | date_to_string } }</span> &raquo; <a href="{ { post.url } }">{ { post.title } }</a></li>
+      { %% endfor %% }
+    </ul>  
 </section>
