--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <section class="content">
   <p>
   Welcome to my playground <a href="portfolio/">Portfolio</a> .
-  Having fun geeking.
+  Having fun geeking :)
   </p>
 
   <h1>Recent Posts</h1>
