--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 </section>
 <section class="content">
   <p>
-  Welcome to my playground <a href="portfolio/">Portfolio</a> .
+  Welcome to my playground <a href="/example/portfolio/">Portfolio</a> .
   Having fun geeking :)
   </p>
 
